fixed overflow, changed viewfactor
want to see if items will scrollreveal sooner

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Lato', sans-serif;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 .navbar{
